# qrxfil

./: .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.org  Cargo.toml  DESIGN.org  Makefile  README.org  RELEASE.org
.github/workflows/: CI.yml  coverage.yml
guix/: README.org  qrxfil-deps.scm  qrxfil-dev-manifest.scm  qrxfil.scm
scripts/: csv.rs  http.rs  qrexfil  qrextract
src/: chunk_iterator.rs  command.rs  csv_decode.rs  decode.rs  file_io.rs  main.rs  parser.rs  payload_size.rs  pdf.rs
src/command/: exfil.rs
tests/: 5_part_readme.csv  encoded_data.txt  end_to_end_test.rs  integration_tests.rs
