[package]
name = "qrxfil"
version = "0.1.0"
authors = ["Jb DOYON <jb@jiby.tech>"]
license = "GPL-3.0-or-later"
readme = "README.org"
repository = "https://github.com/OverkillGuy/qrxfil/"
description = "Exfiltrate files via QR codes"
edition = "2018"


[dependencies]
qrcode = "0.12"
image = "^0.23"
base64 = "0.13.0"
clap = "2.33.3"
itertools = "^0.10"
thiserror = "1.0.24"
pandoc = "0.8.4"
csv = "1.1"
serde = { version = "^1", features = ["derive"] }


[dev-dependencies]
rand = "0.8.3"
assert_cmd = "1.0.3"
assert_fs = "1.0.1"
predicates = "1.0.7"
# Symmetric decode test
rqrr = {version = "0.3.2", features = ["image"]}
test-case = "1.1.0"
